// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`рендерит два поля скидок для не LCV 1`] = `
Array [
  "Скидка по лизингу, ₽",
  "Максимальная скидка, ₽",
]
`;

exports[`рендерит пять полей скидок для LCV 1`] = `
Array [
  "Скидка за кредит, ₽",
  "Скидка за КАСКО, ₽",
  "Скидка за трейд-ин, ₽",
  "Скидка по лизингу, ₽",
  "Максимальная скидка, ₽",
]
`;
